
0.4.1
	Mail
		added: errors_to()
		added: reply_to()
		specifying: set_template
	Queue
		specifying: Queue::clean($type,$fin,$paginate_by)
	flow\module\Helper
		specifying: Helper.media()
0.4.0 (2014/04/01)